tests/neg-custom-args/captures/i21401.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21401.scala:15:28 ---------------------------------------
15 |  val a = usingIO[IO^](x => x) // error
   |                            ^
   |Found:    IO^{x}
   |Required: IO^{any}
   |
   |Note that capability `x` cannot flow into capture set {any}
   |because (x : IO^) in an enclosing function is not visible from any in value a.
   |
   |where:    ^   refers to a root capability created in anonymous function of type (x²: IO^²): IO^² of parameter parameter x of method $anonfun
   |          any is a root capability created in value a
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i21401.scala:16:66 ------------------------------------------------------------
16 |  val leaked: [R, X <: Boxed[IO^] -> R] -> (op: X) -> R = usingIO[Res](mkRes) // error
   |                                                                  ^^^
   |     Type variable R of method usingIO cannot be instantiated to [R, X <: Boxed[IO^] -> R] => (op: X) -> R since
   |     the part IO^ of that type captures the root capability `any`.
   |
   |     where:    ^ refers to the root capability caps.any
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21401.scala:17:72 ---------------------------------------
17 |  val x: Boxed[IO^] = leaked[Boxed[IO^], Boxed[IO^] -> Boxed[IO^]](x => x) // error
   |                                                                        ^
   |                                        Found:    Boxed[IO^{x*}]
   |                                        Required: Boxed[IO^{any}]
   |
   |                                        Note that capability `x*` cannot flow into capture set {any}
   |                                        because x* in an enclosing function is not visible from any in value x².
   |
   |                                        where:    any is a root capability created in value x²
   |                                                  x   is a parameter in an anonymous function in method test2
   |                                                  x²  is a value in method test2
   |
   | longer explanation available when compiling with `-explain`
